welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Int
                        for (compteur <- 1 to nbPas) {avance()}}
                                      ^Program:5: error: type mismatch;
 found   : Unit
 required: Int
  else {recule()}} 
              ^