welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas:Int, versLAvant:Boolean): Int = {
if (versLAvant == true) {var compteur:Int = 0
                        for (compteur <- 1 to nbPas) {avance()}}
  else {recule()}}